fix jdk 17 build
Signed-off-by: Olivier Lamy <olamy@apache.org>